--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=${Taxi24_DATABASE_URL}
 spring.datasource.username=
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
